# MealieAPI

./: .gitignore  .gitpod.yml  Dockerfile  README.md  TODO.md  compose.yml  file.html  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: code.yml  python-publish.yml  style.yml
mealieapi/: __init__.py  auth.py  backup.py  client.py  const.py  errors.py  meals.py  misc.py  mixins.py  model.py  raw.py  recipes.py  users.py
mealieapi/models/: __init__.py  app.py  base.py
tests/: test_core.py  test_endpoints.py  test_suite.py
tests/data/: test_recipe_asset.txt
