[tool.isort]
profile = "black"

[tool.mypy]
disable_error_code = ["import", "attr-defined"]

[tool.pylint.message_control]
disable = [
    "import-error",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-arguments",
    "redefined-builtin",
    "invalid-name",
    "line-too-long"
]

[tool.poetry]
name = "MealieAPI"
version = "0.0.0"
description = "Control your Mealie instance with python!"
authors = ["GrandMoff100 <nlarsen23.student@gmail.com>"]
maintainers = ["GrandMoff100 <nlarsen23.student@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/GrandMoff100/MealieAPI"
repository = "https://github.com/GrandMoff100/MealieAPI"
documentation = "https://github.com/GrandMoff100/MealieAPI/tree/master/README.md"
license = "GPL-3.0-or-later"
packages = [
    { include = "mealieapi" }
]


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = "^3.8.1"
pydantic = "^1.9.1"
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.12b0"
mypy = "^0.920"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
