[tool.poetry]
name = "MealieAPI"
version = "1.0.0"
description = "Control your Mealie instance with python!"
authors = ["GrandMoff100 <nlarsen23.student@gmail.com>"]
maintainers = ["GrandMoff100 <nlarsen23.student@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/GrandMoff100/MealieAPI"
repository = "https://github.com/GrandMoff100/MealieAPI"
documentation = "https://github.com/GrandMoff100/MealieAPI/tree/master/README.md"
license = "GPL-3.0-or-later"
packages = [
    { include = "mealieapi" }
]
include = ["mealieapi/py.typed"]


[tool.poetry.dependencies]
python = "^3.7"
aiohttp = {extras = ["speedups"], version = "^3.8.3"}
pydantic = "^1.10.4"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
mypy = "^0.920"
pytest = "^6.2.5"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
ruff = "^0.0.212"

[tool.ruff]
exclude = [
    '.git',
    '__pycache__',
    '.github',
    '.venv',
]
ignore = ['E501']
select = [
    'E',
    'F',
    'W',
]

[tool.ruff.per-file-ignores]
"__init__.py" = ['F401']

[tool.mypy]
disable_error_code = ["import", "attr-defined"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"