[metadata]
name = MealieAPI
version = attr: mealieapi.__version__
description = "Control your Mealie instance with python!"
long_description = file: README.md
long_description_content_type = text/markdown
install_requires = aiohttp
license = GPLv3

[options]
packages = mealieapi

[flake8]
ignore = E501
exclude = .git, __pycache__, .github, venv
per-file-ignores = __init__.py:F401
